# codebook

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  campus.py  demo.py  device.py  health.py  learner.py  lesson_views.py  teacher.py  utils.py
backend/app/core/: config.py  init_db.py  permissions.py  security.py
backend/app/jobs/: absence_job.py  backup_job.py
backend/app/models/: __init__.py  attendance.py  campus.py  course.py  device.py  face.py  hour.py  lesson.py  log.py  mixins.py  notification.py  student.py  teacher.py  user.py
backend/app/schemas/: campus.py  device.py  hour.py  lesson.py
backend/app/services/: attendance_service.py  hour_service.py  lesson_service.py
backend/tests/: test_business_flow.py
camera-agent/: pyproject.toml
camera-agent/agent/: config.py  main.py
camera-agent/agent/api/: client.py
camera-agent/agent/camera/: capture.py
camera-agent/agent/face/: face_store.py  liveness.py  pipeline.py  quality.py  recognizer.py  types.py
camera-agent/agent/queue/: dedup.py  offline_queue.py
camera-agent/agent/ui/: app.py
deploy/launchd/: com.codebook.api.plist  com.codebook.camera-agent.plist
deploy/nginx/: codebook.conf
deploy/scripts/: backup_postgres.sh  health_check.sh  (+1 more)
docs/: 01-product-requirements.md  02-technical-architecture.md  03-database-design.md  04-api-design.md  05-deployment-plan.md  06-mvp-roadmap.md
miniprogram/: README.md  app.json  app.ts  app.wxss  package-lock.json  package.json  project.config.json  tsconfig.json  types.d.ts
(+37 files in other folders)
