[project]
name = "codebook-camera-agent"
version = "0.1.0"
description = "USB camera agent for Codebook attendance."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "opencv-python>=4.10.0.84",
  "pydantic-settings>=2.4.0",
  "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

